# SpeedyBeeF405-Test

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: arm-none-eabi.cmake
docs/: pinout.md  tooling.md
include/: board.h  dps310.h  icm42688p.h  stm32f405xx_min.h
linker/: STM32F405RGTx_FLASH.ld
scripts/: flash-dfu.ps1  gdb-openocd.ps1  openocd-stlink.ps1
src/: board.c  dps310.c  icm42688p.c  main.c  startup_stm32f405xx.c
tests/host/: CMakeLists.txt  fake_board.c  fake_board.h  test_drivers.c
